Fixed alignment of footer when in mobile mode
modified:   css/misc.css
modified:   index.php

--- a/css/misc.css
+++ b/css/misc.css
@@ -135,8 +135,6 @@ span.logo.skype {
   font-size: 13px;
   padding: 0px;
   margin: 0px;
-  position: fixed;
-  bottom: 0px;
 }
 .footer div > div {
   text-align: center;
